src/snapshots/mdcat__tests__layout__begins_with_block_quote.snap
---
source: src/lib.rs
assertion_line: 307
expression: "render_string_dumb(\"> Hello World\").unwrap()"
snapshot_kind: text
---
▌ Hello World
