src/snapshots/mdcat__tests__layout__flush_ref_links_before_toplevel_heading.snap
---
source: src/lib.rs
assertion_line: 353
expression: "render_string_dumb(\"> Hello [World](http://example.com/world)\n\n> # No refs before this headline\n\n# But before this\").unwrap()"
snapshot_kind: text
---
▌ Hello World[1]

  No refs before this headline
════════════════════════════════════════════════════════════════════════════════

[1]: http://example.com/world

But before this
════════════════════════════════════════════════════════════════════════════════
