src/snapshots/mdcat__tests__layout__heading_in_block_quote.snap
---
source: src/lib.rs
assertion_line: 322
expression: "render_string_dumb(\"> Hello World\n\n> # Hello World\").unwrap()"
snapshot_kind: text
---
▌ Hello World

  Hello World
════════════════════════════════════════════════════════════════════════════════
