src/snapshots/mdcat__tests__layout__rule_in_block_quote.snap
---
source: src/lib.rs
assertion_line: 312
expression: "render_string_dumb(\"> Hello World\n\n> ----\").unwrap()"
snapshot_kind: text
---
▌ Hello World

  ══════════════════════════════════════════════════════════════════════════════
